[package]
name = "gmod-panel-api"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

[dependencies]
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
diesel = { version = "1.4.4", features = ["sqlite"] }

serde = {version = "1.0", features = ["derive"]}
serde_json = "1"

actix-web = "3"
env_logger = "0.8"