[package]
name = "gmod-panel-api"
version = "0.1.1"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

[dependencies]
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
r2d2 = "0.8"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }

serde = {version = "1.0", features = ["derive"]}
serde_json = "1"

actix-web = "3"
env_logger = "0.8"